--- a/src/components/Highlights/Highlights.css
+++ b/src/components/Highlights/Highlights.css
@@ -67,3 +67,13 @@
     margin: 0 auto;
   }
 }
+
+@media (max-width: 767px) {
+  .highlights-wrapper h1 {
+    font-size: 30px;
+  }
+
+  .highlights-wrapper p {
+    font-size: 12px;
+  }
+}
