--- a/src/components/WhatWeDo/WhatWeDo.css
+++ b/src/components/WhatWeDo/WhatWeDo.css
@@ -80,6 +80,30 @@
   position: relative;
 }
 
+.slider-indicator {
+  z-index: 3;
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.slider-indicator span {
+  width: 10px;
+  height: 10px;
+  background-color: rgba(255, 255, 255, 0.555);
+  border-radius: 50%;
+  margin: 0 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+.slider-indicator .active {
+  background-color: #699bff;
+}
+
 @media (max-width: 1250px) {
   .what-we-do-inner-wrapper {
     width: 75%;
